Fix smaller gap post type archive

--- a/source/sass/components/archive-post-type.scss
+++ b/source/sass/components/archive-post-type.scss
@@ -18,7 +18,7 @@
 .c-post-type-archive {
   display: flex;
   flex-direction: column;
-  gap: 3rem;
+  gap: 1rem;
 
   &__hero {
     margin-bottom: 0.5rem;
